# uv-app

./: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  main.py  pyproject.toml  sbom.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
app/: main.py
app/api/: routes.py
app/core/: health.py
tests/: test_routes.py
