[project]
name = "fastapi-uv-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "cyclonedx-bom>=7.2.2",
    "httpx>=0.28.1",
    "pip-audit>=2.10.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "python-semantic-release>=10.5.3",
    "ruff>=0.15.6",
]

[tool.semantic_release]
version_variable = [
  "pyproject.toml:project.version"
]

branch = "main"
upload_to_pypi = false
build_command = "echo 'build step'"
commit_message = "chore(release): {version}"

[tool.semantic_release.changelog]
exclude_commit_patterns = [
  "^docs:",
  "^chore:"
]